# devicehelper

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  IDevicehelperServer.hpp  main.cpp  run.hpp
src/deviceDetectors/: CMakeLists.txt  USBDetector.cpp  USBDetector.hpp  usbdetector.cpp  usbdetector.hpp
src/processor/: CMakeLists.txt  DevicehelperServer.cpp  DevicehelperServer.hpp  external_glib_headers.hpp  run.cpp
src/utils/: AAPConsts.cpp  AAPConsts.hpp  DeviceEnums.hpp  DeviceEventLoop.cpp  DeviceEventLoop.hpp  DeviceInfo.hpp  DeviceInfoList.cpp  DeviceInfoList.hpp  Messagequeue.hpp  deviceinfo.hpp  libusb_wrapper.cpp  libusb_wrapper.hpp  log.hpp
